SERVER-113344 check errors only for upserts without shard key (#45484)

GitOrigin-RevId: 0410f46006483fb3c15084d3919409acfaafb20d